# rust-web

backend/: .env  Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  tailwind.config.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/lib/: api.ts  auth.tsx
